; ModuleID = '/home/carl/AnghaBench/linux/security/integrity/ima/extr_ima_modsig.c_ima_get_modsig_digest.c'
source_filename = "/home/carl/AnghaBench/linux/security/integrity/ima/extr_ima_modsig.c_ima_get_modsig_digest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.modsig = type { i32, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ima_get_modsig_digest(%struct.modsig* %0, i32* %1, i32** %2, i32* %3) #0 {
  %5 = alloca %struct.modsig*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  store %struct.modsig* %0, %struct.modsig** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32** %2, i32*** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load %struct.modsig*, %struct.modsig** %5, align 8
  %10 = getelementptr inbounds %struct.modsig, %struct.modsig* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = load i32*, i32** %6, align 8
  store i32 %11, i32* %12, align 4
  %13 = load %struct.modsig*, %struct.modsig** %5, align 8
  %14 = getelementptr inbounds %struct.modsig, %struct.modsig* %13, i32 0, i32 2
  %15 = load i32*, i32** %14, align 8
  %16 = load i32**, i32*** %7, align 8
  store i32* %15, i32** %16, align 8
  %17 = load %struct.modsig*, %struct.modsig** %5, align 8
  %18 = getelementptr inbounds %struct.modsig, %struct.modsig* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** %8, align 8
  store i32 %19, i32* %20, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
